tdf#103409: No selection outline displayed when SUM button is clicked

Change-Id: I8a1bb22bd0be9717a56a90732b17c4ed8f230bf3