sc/source/ui/inc/tabvwsh.hxx
@@ -383,7 +383,7 @@ public:
     bool IsActive() const { return bIsActive; }
     OUString GetFormula(ScAddress& rAddress);
     bool    UseSubTotal(ScRangeList* pRangeList);
-    const   OUString DoAutoSum();
+    const   OUString DoAutoSum(bool& rRangeFinder, bool& rSubTotal);
 
     // ugly hack to call Define Names from Manage Names
     void    SwitchBetweenRefDialogs(SfxModelessDialog* pDialog);
